styles/quiz_style.css
:root {
  --color-text-rgb: 51, 51, 51; /* #333333 */
  --color-bg-rgb: 250, 250, 250; /* #fafafa */

  --color-text: rgb(var(--color-text-rgb));
  --color-bg: rgb(var(--color-bg-rgb));
}
.dark {
  --color-text-rgb: 250, 250, 250; /* #fafafa */
  --color-bg-rgb: 51, 51, 51; /* #333333 */
}

:root {
  font-size: 12px;
}

body {
  font-family: Comic Sans MS;
  font-size: 17px;
  color: var(--color-text);
  background-color: var(--color-bg);
}

@import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&display=swap');
/* @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap'); */

html, body, #__next {
	height: 100%;
}
body {
	font-family: 
		/* 'M PLUS Rounded 1c', */
		'Kiwi Maru',
		serif;
}

/*
// For debuggin: there is a bug in firefox, 
// that user cannot press enter after pressing 
// enter to submit their MC type qeustion's answer. 
//
// Is it my site's and chrome's, or is it firefox's bug?
//
*:focus {
  outline: 2em solid #F00 !important;
}
*/

.quizStyles button,
.quizStyles input {
  --btn-color-text-rgb: var(--color-text-rgb);
  --btn-color-border-rgb: var(--color-text-rgb);

  --btn-color-text: rgb(var(--btn-color-text-rgb));
  --btn-color-border: rgb(var(--btn-color-border-rgb));

	background-color: transparent;
  color: var(--btn-color-text);
	border: 0.1rem solid var(--btn-color-border);
	padding: .8rem 1rem;
	min-width: 2rem;
	margin: 0rem 0.75rem;
	border-radius: 1.5rem;
	font-size: 1.75rem;
}

.quizStyles button svg path {
  /* Use text color as fill color */
  fill: var(--btn-color-text);
}

.quizStyles button:focus,
.quizStyles input:focus {
  outline: none;
}
.quizStyles button[disabled]:not(.correct, .incorrect) {
  --btn-color-text: rgba(var(--color-text-rgb), .25);
  --btn-color-border: rgba(var(--color-text-rgb), .25);
}
.quizStyles button.recording,
.quizStyles button.selected,
.quizStyles input:focus,
.quizStyles input.answered {
  --btn-color-text-rgb: 91, 200, 255;
  --btn-color-border-rgb: 91, 200, 255;
  /* Blue */
}
.quizStyles button.correct,
.quizStyles input.correct {
  --btn-color-text-rgb: 52, 212, 105;
  --btn-color-border-rgb: 77, 231, 128;
  /* Green */
}
.quizStyles button.incorrect,
.quizStyles input.incorrect {
  --btn-color-text-rgb: 255, 118, 118;
  --btn-color-border-rgb: 255, 118, 118;
  /* Red (#ff7676) */
}
main {
  padding: 0 10px;
}

/* container layout */
.app-container {
  height: 100%;
  display: grid;
  grid-template-columns: 100%;
	grid-template-rows: 11.25rem 1fr 10rem;
}

.session {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 3.125rem;
  width: 100%;
}

/* progress */
.progressNav {
  margin: 4rem auto 6rem;
  display: flex;
}
.session.progressNav {
  max-width: 1230px;
}

.progressNav .progressBar {
  height: 1.25rem;
  background: rgba(51, 51, 51, 0.05);
  border-radius: 0.625rem;
  transition: 0.5s;
  flex-grow: 1;
}

.progressNav .progressBar > .progress {
  background: #7AF16C;
  height: 100%;
  border-radius: 0.625rem;
  transition: 0.5s;
}

.progressNav .cross {
  height: 1.25rem;
  width: 1.25rem;
  margin-left: 2.5rem;
}

/* question */
.question_container {
  padding-bottom: 2rem;
}
.question_container .instruction {
  font-size: 2.25rem;
}
.question_container .question_area {
  margin: 10rem auto;
  text-align: center;
}
.question_container .question_area .primary {
  font-size: 3rem;
}
.question_container .question_area .secondary {
  font-size: 1.875rem;
  margin-top: 1.875rem;
}

.audio {
  text-align: center;
}
.audio .playbutton {
  display: inline-block;
  width: 7rem;
}
.audio .playbutton svg {
  width: 100%;
}

.primary .playbutton {
  display: inline-block;
  height: 1.5em;
  vertical-align: middle;
  margin-right: 1.5rem;
}
.primary .playbutton svg {
  height: 100%;
}
.primary span {
  vertical-align: middle;
}

/* answer */
.options {
  padding: 1rem 0.5rem;
  max-width: 720px;
  margin: 0 auto;

  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  column-gap: 1.5rem;
}
@media (min-width: 1000px) {
  .options {
    padding: 1rem 2rem;
  }
}
@media (max-width: 640px) {
  .options {
    padding-left: 0rem;
    padding-right: 0rem;
    max-width: 420px;

    grid-template-columns: 1fr 1fr;
    column-gap: 0.75rem;
    row-gap: 0.75rem;
  }
}
@media (max-width: 420px) {
  .options {
    max-width: 300px;

    grid-template-columns: 1fr;
  }
}

.options > .option {
  margin: 0;
}

.input_container {
  text-align: center;
  padding: 1rem 2rem;
}

.input_container > .input {
  text-align: center;
  max-width: 16rem;
  min-width: 16rem;
  width: 100%;
}

.image_container {
  text-align: center;
}
.image_container img {
  max-height: 225px;
  display: inline-block;
}

.speech {
  text-align: center;
}
.speech button {
  width: 100%;
  max-width: 400px;
  margin: 0;
}
.speech button svg {
  display: inline-block;
  vertical-align: middle;
  margin-left: .5rem;
  margin-right: .5rem;
}
.speech button span {
  vertical-align: middle;
  display: inline-block;
  margin-top: -3px;
  margin-left: .5rem;
  margin-right: .5rem;
}
@media (max-width: 275px) {
  .speech button span {
    display: none;
  }
}

/* footer */
.footer {
  position: relative;
  overflow: hidden;
}

.advice {
  background: #d7ffb8;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 100%;
  transition: 0.2s;
}
.advice.shown {
  top: 0;
}

.footer > .session,
.advice > .session {
  display: flex;
  height: 100%;
  align-items: center;
}
.footer > .session button,
.advice > .session button {
  padding: 1rem 2rem;
  font-size: 1.25rem;
}

/* finish screen */
.finishScreen {
  text-align: center;
}

